[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Abhay Karol <abhay.karol@essec.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"
numpy = "^2.2.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
